--- a/index.html
+++ b/index.html
@@ -1,1 +1,282 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Mya Song — Interior Design Portfolio. Comfort-forward, refined interiors with a wellness-minded approach." />
+  <title>Mya Song | Interior Design Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Modern serif + clean sans pairing -->
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,300,500,700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <!-- Top announcement strip (optional) -->
+  <div class="topline" role="note" aria-label="Portfolio note">
+    Available for internships & entry-level roles • Chicago-focused • Open to relocation
+  </div>
+
+  <header class="header" id="top">
+    <nav class="nav" aria-label="Primary">
+      <a class="brand" href="#home" aria-label="Go to Home">
+        <span class="brand-mark" aria-hidden="true"></span>
+        <span class="brand-text">MS</span>
+      </a>
+
+      <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false">
+        <span></span><span></span><span></span>
+      </button>
+
+      <div class="nav-links" data-nav>
+        <a href="#home" data-link>Home</a>
+        <a href="#about" data-link>About Me</a>
+        <a href="#projects" data-link>Projects</a>
+      </div>
+
+      <div class="nav-cta">
+        <a class="btn btn-ghost" href="assets/portfolio.pdf" target="_blank" rel="noopener">View Portfolio PDF</a>
+        <a class="btn" href="assets/resume.pdf" target="_blank" rel="noopener">Download Resume</a>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <!-- HOME -->
+    <section class="section hero" id="home">
+      <div class="container hero-grid">
+        <div class="hero-copy">
+          <p class="kicker">Interior Design Portfolio</p>
+          <h1 class="headline">
+            <span class="serif">Design that doesn’t just look like home —</span>
+            <span class="serif">it feels like it.</span>
+          </h1>
+
+          <p class="subhead">
+            I create comfort-forward interiors with refined, quiet details—spaces that support real life,
+            elevate daily routines, and feel grounded the moment you walk in.
+          </p>
+
+          <div class="hero-actions">
+            <a class="btn" href="#projects">Explore Projects</a>
+            <a class="btn btn-ghost" href="#about">About Me</a>
+          </div>
+
+          <div class="hero-metrics" aria-label="Highlights">
+            <div class="metric">
+              <div class="metric-num">3+</div>
+              <div class="metric-label">Design internships</div>
+            </div>
+            <div class="metric">
+              <div class="metric-num">Revit</div>
+              <div class="metric-label">Workflow-ready</div>
+            </div>
+            <div class="metric">
+              <div class="metric-num">Commercial</div>
+              <div class="metric-label">+ residential focus</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="hero-card" aria-label="Featured visual">
+          <div class="hero-card-inner">
+            <p class="chip">Featured</p>
+            <h2 class="hero-card-title serif">NEXT Law Office</h2>
+            <p class="hero-card-text">
+              A warm, adaptable workplace concept designed around calm acoustics, natural light, and human-scale comfort.
+            </p>
+
+            <div class="hero-card-image" role="img" aria-label="Project preview image">
+              <!-- Replace this background in CSS or drop an image here -->
+            </div>
+
+            <div class="hero-card-footer">
+              <span class="tag">Commercial</span>
+              <span class="tag">Workplace</span>
+              <span class="tag">Revit • Enscape</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section class="section" id="about">
+      <div class="container two-col">
+        <div>
+          <h2 class="section-title serif">About Me</h2>
+          <p class="lead">
+            I’m <span class="emph">:contentReference[oaicite:2]{index=2}</span>, an interior design student at
+            <span class="emph">:contentReference[oaicite:3]{index=3}</span> (BFA Interior Design, CIDA-accredited).
+            My work centers on comfort, material warmth, and thoughtful details—design choices that feel intentional, not staged.
+            :contentReference[oaicite:4]{index=4}
+          </p>
+
+          <div class="info-cards">
+            <article class="card">
+              <h3 class="card-title">What I’m known for</h3>
+              <ul class="list">
+                <li>Warm, modern palettes + clean, livable layouts</li>
+                <li>Concept-to-detail thinking (finishes, schedules, product selections)</li>
+                <li>Visual storytelling: boards, diagrams, and presentation clarity</li>
+              </ul>
+            </article>
+
+            <article class="card">
+              <h3 class="card-title">Technical skills</h3>
+              <div class="pill-row" aria-label="Technical skills">
+                <span class="pill">Revit</span>
+                <span class="pill">AutoCAD</span>
+                <span class="pill">Adobe Suite</span>
+                <span class="pill">SketchUp</span>
+                <span class="pill">Lumion</span>
+                <span class="pill">Enscape</span>
+                <span class="pill">Hand Drafting</span>
+              </div>
+              <p class="note">Skills listed from your resume. :contentReference[oaicite:5]{index=5}</p>
+            </article>
+          </div>
+        </div>
+
+        <aside class="timeline" aria-label="Experience timeline">
+          <div class="timeline-head">
+            <h3 class="serif">Experience</h3>
+            <p>Highlights pulled from your resume (internships + related work). :contentReference[oaicite:6]{index=6}</p>
+          </div>
+
+          <div class="timeline-item">
+            <div class="dot"></div>
+            <div>
+              <div class="timeline-title">
+                :contentReference[oaicite:7]{index=7} — Commercial Millwork (Summer 2025)
+              </div>
+              <div class="timeline-body">
+                Work orders, shop drawings, hardware cut sheets, submittal support, and coordination exposure.
+              </div>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="dot"></div>
+            <div>
+              <div class="timeline-title">
+                :contentReference[oaicite:8]{index=8} — Design Internship (Summer 2024)
+              </div>
+              <div class="timeline-body">
+                Concept boards, fabric wall updates, client meetings, finish/product schedule support.
+              </div>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="dot"></div>
+            <div>
+              <div class="timeline-title">
+                :contentReference[oaicite:9]{index=9} — Studio Support (Fall 2021)
+              </div>
+              <div class="timeline-body">
+                Material library organization, sourcing, and vendor coordination support.
+              </div>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="dot"></div>
+            <div>
+              <div class="timeline-title">Currently</div>
+              <div class="timeline-body">
+                Building a portfolio focused on hospitality/commercial and elevated residential work.
+              </div>
+            </div>
+          </div>
+
+          <div class="timeline-actions">
+            <a class="btn btn-ghost" href="assets/resume.pdf" target="_blank" rel="noopener">Open Resume</a>
+            <a class="btn btn-ghost" href="assets/portfolio.pdf" target="_blank" rel="noopener">Open Portfolio</a>
+          </div>
+        </aside>
+      </div>
+    </section>
+
+    <!-- PROJECTS -->
+    <section class="section" id="projects">
+      <div class="container">
+        <div class="section-head">
+          <h2 class="section-title serif">Projects</h2>
+          <p class="lead">
+            A curated selection of commercial + residential work, presented with clear concepts, material direction, and spatial intent.
+            Project titles reflect your portfolio PDF contents. :contentReference[oaicite:10]{index=10}
+          </p>
+        </div>
+
+        <div class="filters" role="tablist" aria-label="Project filters">
+          <button class="filter is-active" type="button" data-filter="all" role="tab" aria-selected="true">All</button>
+          <button class="filter" type="button" data-filter="commercial" role="tab" aria-selected="false">Commercial</button>
+          <button class="filter" type="button" data-filter="residential" role="tab" aria-selected="false">Residential</button>
+        </div>
+
+        <div class="grid" id="projectGrid" aria-label="Project grid">
+          <!-- JS injects cards here -->
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT (small, at bottom) -->
+    <section class="section contact" id="contact">
+      <div class="container contact-bar">
+        <div>
+          <h2 class="serif">Contact</h2>
+          <p class="muted">Let’s connect about internships, entry-level roles, or collaborations.</p>
+        </div>
+
+        <div class="contact-actions">
+          <a class="btn btn-ghost" href="mailto:sturdevantm03@gmail.com">Email</a>
+          <button class="btn" type="button" id="copyEmail" data-email="sturdevantm03@gmail.com">Copy Email</button>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer" aria-label="Footer">
+    <div class="container footer-grid">
+      <div class="footer-left">
+        <div class="footer-brand serif">Mya Song</div>
+        <div class="footer-meta">Interior Design • Ames, IA</div>
+      </div>
+
+      <div class="footer-right">
+        <a href="tel:+15156507112" class="footer-link">515-650-7112</a>
+        <a href="mailto:sturdevantm03@gmail.com" class="footer-link">sturdevantm03@gmail.com</a>
+        <!-- Replace with your real LinkedIn if you want -->
+        <a href="#" class="footer-link" aria-disabled="true">LinkedIn (add link)</a>
+      </div>
+    </div>
+
+    <div class="container footer-bottom">
+      <span>© <span id="year"></span> Mya Song</span>
+      <a href="#top" class="backtop">Back to top ↑</a>
+    </div>
+  </footer>
+
+  <!-- Modal -->
+  <dialog class="modal" id="projectModal" aria-label="Project details">
+    <div class="modal-inner">
+      <button class="modal-close" type="button" aria-label="Close">×</button>
+      <div class="modal-body">
+        <div class="modal-media" id="modalMedia" aria-label="Project image"></div>
+        <div class="modal-content">
+          <p class="chip" id="modalType">Project</p>
+          <h3 class="serif" id="modalTitle">Title</h3>
+          <p class="muted" id="modalMeta">Meta</p>
+          <p id="modalDesc">Description</p>
+          <div class="pill-row" id="modalTools" aria-label="Tools"></div>
+        </div>
+      </div>
+    </div>
+  </dialog>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
