--- a/index.html
+++ b/index.html
@@ -49,13 +49,12 @@
         <div class="hero-copy">
           <p class="kicker">Interior Design Portfolio</p>
           <h1 class="headline">
-            <span class="serif">Design that doesn’t just look like home —</span>
-            <span class="serif">it feels like it.</span>
+            <span class="serif">Design rooted in comfort,</span>
+            <span class="serif">shaped in real life.</span>
           </h1>
 
           <p class="subhead">
-            I create comfort-forward interiors with refined, quiet details—spaces that support real life,
-            elevate daily routines, and feel grounded the moment you walk in.
+            I believe that interiors should make you feel like you're stepping into something familiar, something that you've always known, a comforting and pleasurable experience that invites life.
           </p>
 
           <div class="hero-actions">
