Add logo image and current projects section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="header" id="top">
     <nav class="nav" aria-label="Primary">
       <a class="brand" href="#home" aria-label="Go to Home">
-        <span class="brand-mark" aria-hidden="true"></span>
+        <img class="brand-logo" src="assets/profile_picture.jpg" alt="Profile portrait logo" />
         <span class="brand-text">MS</span>
       </a>
 
@@ -221,6 +221,23 @@
       </div>
     </section>
 
+    <!-- CURRENT PROJECTS -->
+    <section class="section" id="current-projects">
+      <div class="container">
+        <div class="section-head">
+          <h2 class="section-title serif">Current Projects</h2>
+          <p class="lead">A snapshot of what I’m actively developing right now.</p>
+        </div>
+
+        <div class="current-projects">
+          <article class="current-project">
+            <h3 class="project-title serif">Woodland Cottage</h3>
+            <p class="project-meta">In-progress residential concept focused on warm woods, layered textures, and relaxed living.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
     <!-- CONTACT (small, at bottom) -->
     <section class="section contact" id="contact">
       <div class="container contact-bar">
@@ -278,4 +295,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
