Adjust logo sizing and project media layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <nav class="nav" aria-label="Primary">
       <a class="brand" href="#home" aria-label="Go to Home">
         <img class="brand-logo" src="assets/profile_picture.jpg" alt="Profile portrait logo" />
-        <span class="brand-text">MS</span>
       </a>
 
       <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false">
@@ -106,10 +105,9 @@
         <div>
           <h2 class="section-title serif">About Me</h2>
           <p class="lead">
-            I’m <span class="emph">:contentReference[oaicite:2]{index=2}</span>, an interior design student at
-            <span class="emph">:contentReference[oaicite:3]{index=3}</span> (BFA Interior Design, CIDA-accredited).
+            I’m <span class="emph">Mya Song</span>, an interior design student at
+            <span class="emph">Iowa State University</span> (BFA Interior Design, CIDA-accredited).
             My work centers on comfort, material warmth, and thoughtful details—design choices that feel intentional, not staged.
-            :contentReference[oaicite:4]{index=4}
           </p>
 
           <div class="info-cards">
@@ -133,7 +131,7 @@
                 <span class="pill">Enscape</span>
                 <span class="pill">Hand Drafting</span>
               </div>
-              <p class="note">Skills listed from your resume. :contentReference[oaicite:5]{index=5}</p>
+              <p class="note">Skills listed from your resume.</p>
             </article>
           </div>
         </div>
@@ -141,14 +139,14 @@
         <aside class="timeline" aria-label="Experience timeline">
           <div class="timeline-head">
             <h3 class="serif">Experience</h3>
-            <p>Highlights pulled from your resume (internships + related work). :contentReference[oaicite:6]{index=6}</p>
+            <p>Highlights pulled from your resume (internships + related work).</p>
           </div>
 
           <div class="timeline-item">
             <div class="dot"></div>
             <div>
               <div class="timeline-title">
-                :contentReference[oaicite:7]{index=7} — Commercial Millwork (Summer 2025)
+                Millwork Partner — Commercial Millwork (Summer 2025)
               </div>
               <div class="timeline-body">
                 Work orders, shop drawings, hardware cut sheets, submittal support, and coordination exposure.
@@ -160,7 +158,7 @@
             <div class="dot"></div>
             <div>
               <div class="timeline-title">
-                :contentReference[oaicite:8]{index=8} — Design Internship (Summer 2024)
+                Studio North — Design Internship (Summer 2024)
               </div>
               <div class="timeline-body">
                 Concept boards, fabric wall updates, client meetings, finish/product schedule support.
@@ -172,7 +170,7 @@
             <div class="dot"></div>
             <div>
               <div class="timeline-title">
-                :contentReference[oaicite:9]{index=9} — Studio Support (Fall 2021)
+                Department Library — Studio Support (Fall 2021)
               </div>
               <div class="timeline-body">
                 Material library organization, sourcing, and vendor coordination support.
@@ -205,7 +203,7 @@
           <h2 class="section-title serif">Projects</h2>
           <p class="lead">
             A curated selection of commercial + residential work, presented with clear concepts, material direction, and spatial intent.
-            Project titles reflect your portfolio PDF contents. :contentReference[oaicite:10]{index=10}
+            Project titles reflect your portfolio PDF contents.
           </p>
         </div>
 
@@ -217,7 +215,9 @@
 
         <div class="grid" id="projectGrid" aria-label="Project grid">
           <article class="project" tabindex="0" role="button" aria-label="Open NEXT Law Office" data-id="next-law">
-            <div class="project-media" style="background-image:url('assets/next_office_1.jpg')"></div>
+            <div class="project-media">
+              <img class="project-image" src="assets/project-next.jpg" alt="NEXT Law Office preview" />
+            </div>
             <div class="project-body">
               <h3 class="project-title serif">NEXT Law Office</h3>
               <p class="project-meta">Workplace concept • Comfort + adaptability • Revit / Enscape</p>
@@ -229,7 +229,9 @@
             </div>
           </article>
           <article class="project" tabindex="0" role="button" aria-label="Open Hermès Airport Lounge" data-id="hermes-lounge">
-            <div class="project-media" style="background-image:url('assets/hermes_airport_lounge_1.jpg')"></div>
+            <div class="project-media">
+              <img class="project-image" src="assets/project-hermes.jpg" alt="Hermès Airport Lounge preview" />
+            </div>
             <div class="project-body">
               <h3 class="project-title serif">Hermès Airport Lounge</h3>
               <p class="project-meta">Hospitality/lounge • Heritage-inspired material story</p>
@@ -241,7 +243,9 @@
             </div>
           </article>
           <article class="project" tabindex="0" role="button" aria-label="Open Mid-Century Manor" data-id="midcentury-manor">
-            <div class="project-media" style="background-image:url('assets/mid_century_manor_1.jpg')"></div>
+            <div class="project-media">
+              <img class="project-image" src="assets/project-midcentury.jpg" alt="Mid-Century Manor preview" />
+            </div>
             <div class="project-body">
               <h3 class="project-title serif">Mid-Century Manor</h3>
               <p class="project-meta">Residential update • Mid-century cues • Calm palette</p>
@@ -266,25 +270,7 @@
 
         <div class="current-projects">
           <article class="current-project">
-            <div class="current-project-media" data-carousel data-images="assets/woodland_cottage_1.jpg,assets/woodland_cottage_2.jpg" aria-label="Woodland Cottage images"></div>
-            <h3 class="project-title serif">Woodland Cottage</h3>
-            <p class="project-meta">In-progress residential concept focused on warm woods, layered textures, and relaxed living.</p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <!-- CURRENT PROJECTS -->
-    <section class="section" id="current-projects">
-      <div class="container">
-        <div class="section-head">
-          <h2 class="section-title serif">Current Projects</h2>
-          <p class="lead">A snapshot of what I’m actively developing right now.</p>
-        </div>
-
-        <div class="current-projects">
-          <article class="current-project">
-            <div class="current-project-media" data-carousel data-images="assets/woodland_cottage_1.jpg,assets/woodland_cottage_2.jpg"></div>
+            <div class="current-project-media" data-carousel data-images="assets/woodland_cottage1.jpg" aria-label="Woodland Cottage images"></div>
             <h3 class="project-title serif">Woodland Cottage</h3>
             <p class="project-meta">In-progress residential concept focused on warm woods, layered textures, and relaxed living.</p>
           </article>
